<resources>
    <string name="app_name">SA-F</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="search">search</string>
    <string name="site">site</string>
    <string name="logout">登出</string>
    <string name="cancel">取消</string>
    <string name="save">儲存</string>

    <string name="menu_login">登入</string>
    <string name="menu_place">目前地區</string>
    <string name="menu_fav">我的收藏</string>
    <string name="menu_site_search">定位搜尋</string>
    <string name="menu_history">瀏覽紀錄</string>
    <string name="menu_diary">美食日記</string>

    <string name="menu_category">餐廳分類</string>
    <string name="menu_j">日式</string>
    <string name="menu_k">韓式</string>
    <string name="menu_a">美式</string>
    <string name="menu_c">中式</string>
    <string name="menu_h">港式</string>
    <string name="menu_t">泰式</string>
    <string name="menu_v">越式</string>
    <string name="menu_e">歐式</string>
    <string name="menu_s">南洋菜</string>
    <string name="menu_pot">鍋類</string>
    <string name="menu_va">素菜</string>
    <string name="menu_com">合菜</string>
    <string name="menu_after">下午茶</string>
    <string name="menu_morn">早午餐</string>
    <string name="title_activity_tab">tab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom">bottom</string>
    <string name="title_home">首頁</string>
    <string name="title_game">遊戲</string>
    <string name="title_person">個人版面</string>
    <string name="title_activity_my_diary">MyDiary</string>

    <string name="title_my_diary">我的美食日記</string>
    <string name="topic">標題</string>
    <string name="restaurant">餐廳</string>
    <string name="share">我要分享</string>

    <string name="score">評分</string>
</resources>
